--- a/CSE430_Project2/CSE430_Project2.vcxproj.filters
+++ b/CSE430_Project2/CSE430_Project2.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\..\..\..\Joe%27s Documents\College\ASU\Classes\S7\CSE430\Project2\CSE430_Project2\CSE430_Project2\Project2.h">
+    <ClInclude Include="Project2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
